# ml-explainability-agent

./: .gitignore  AGENTS.md  README.md  context.md  main.py  pyproject.toml  requirements.txt  test_open_ai.py
.github/agents/: exml.agent.md
agents/: agent_runner.py  explainability_graph.py  explanation_provider.py  ingestion_node.py  nodes.py  router.py  state.py
agents/explainer_agent/: __init__.py
agents/report_agent/: __init__.py
agents/visualization_agent/: __init__.py
catboost_info/: catboost_training.json  learn_error.tsv
configs/: demo_config.yaml  project_config.yaml
docs/: architecture.md  class_relationship_diagram.md  project_journal.json
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  .graphify_semantic_marker  graph.html  graph.json  manifest.json
ingestion/: __init__.py  artifact_validator.py  data_dictionary_loader.py  model_loader.py  project_context_loader.py  project_knowledge.py
notebooks/: 02_decision_tree_explainability_agent.ipynb  03_langgraph_decision_tree_explainability_agent.ipynb  04_langgraph_tool_calling_decision_tree_agent.ipynb  05_explainability_playground.ipynb  06_complex_test_models.ipynb
prompts/: explanation_prompt.py
scripts/: generate_demo_artifacts.py  test_decision_path.py  test_explainer.py  test_feature_importance.py  test_tree_structure_exporter.py  test_tree_visualizer.py
tests/: test_config_loader.py  test_decision_path_extractor.py  test_decision_tree_reader.py  test_model_loader.py
ui/: _shared.py  app.py
ui/app_pages/: run.py  (+3 more)
utils/: config_loader.py
(+79 files in other folders)
