[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-explainability-agent"
version = "0.1.0"
description = "ML Explainability Agent"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "graphifyy>=0.9.7",
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "langchain>=1.3.7",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["tools*", "utils*", "agents*"]
